# Course_Work_4_OOP

./: README.md  main.py  pyproject.toml
src/: headhunterapi.py  jsonsaver.py  vacancy.py
tests/: test_vacancy.py
