[tool.poetry]
name = "course-work-4-oop"
version = "0.1.0"
description = "CW_4_OOP"
authors = ["Chumak Daniil <danilchumak80@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_4_oop"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
